# go_game_review_analyser

./: .dockerignore  .gitignore  01_go_game_review_summariser.ipynb  02_go_game_review_analyser.ipynb  Dockerfile  README.md  environment.yml  fly.toml  go_game_analyser_helperfuncs.py  prompt_configs.json  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
prototype/: 01_go_game_review_summariser.ipynb  02_go_game_review_analyser.ipynb  go_game_analyser_helperfuncs.py  prompt_configs.json
prototype/game_review_notes/: game_review_template.md
src/: helpers.py  main.py  prompt_configs.json
src/frontend/: app.py
src/pipeline/: analyser.py  comparator.py  db.py  llm.py  parser.py  summariser.py
src/routers/: analyses.py  auth.py  pipeline.py
