[project]
name = "go-game-review-analyser"
version = "0.1.0"
description = "Parses Go game review notes and uses Claude to extract structured insights and track progress"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.95.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "pandas>=3.0.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "streamlit>=1.56.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.44.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
